<resources>
    <string name="app_name">new_kasirpedia</string>
    <string name="txt_sudahadaakun">Sudah punya akun?</string>
    <string name="txt_login">Masuk di sini</string>
    <string name="back_daftar"><![CDATA[< Daftar]]></string>
    <string name="txt_daftar_akun">Daftar Akun</string>
    <string name="txt_daftarsekarang">Daftar sekarang, dapatkan gratis 30 hari</string>
    <string name="hint_nama_lengkap">Nama Lengkap</string>
    <string name="kolom_email">Email</string>
    <string name="kolom_no_telepon">No Telepon</string>
    <string name="kolom_password">Password</string>
    <string name="txt_saya_menyetujui_syarat_dan_ketentuan">Saya menyetujui syarat dan ketentuan</string>
    <string name="txt_sudah_punya_akun_masuk_disini">Sudah punya akun? Masuk disini</string>
    <string name="back_login"><![CDATA[< Login]]></string>
    <string name="selamat_datang_kembali">Selamat Datang Kembali</string>
    <string name="silahkan_masuk_dengan_akun_anda">Silahkan masuk dengan akun anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="tidak_punya_akun_buat_akun">Tidak Punya Akun? Buat Akun</string>
    <string name="informasi_bisnis"><![CDATA[< Informasi Bisnis]]></string>
    <string name="isi_informasi_bisnis_anda">Isi Informasi Bisnis Anda</string>
    <string name="txt_informasi_bisnis">Informasi Bisnis</string>
    <string name="nama_bisnis">Nama Bisnis</string>
    <string name="kolom_jenis_bisnis">Jenis Bisnis</string>
    <string name="lokasi_bisnis">Lokasi Bisnis</string>
    <string name="sudah_punya_akun_masuk_disini">Sudah punya akun? Masuk Disini</string>
    <string name="txt_sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk_disini">Masuk Disini</string>
    <string name="back_berlangganan"><![CDATA[< Berlangganan]]></string>
    <string name="txt_akun_anda_sudah_diverifikasi">Akun anda sudah diverifikasi</string>
    <string name="pilih_metode_berlangganan">PILIH METODE BERLANGGANAN</string>
    <string name="txt_1_menggunakan_fitur_yang_tersedia">1. Menggunakan fitur yang tersedia</string>
    <string name="menggunakan_fitur_yang_tersedia">1. Menggunakan Fitur yang tersedia</string>
    <string name="laporan_lebih_lengkap">2. Laporan Lebih Lengkap</string>
    <string name="kelola_multi_outlet_dalam_satu_akun">3. Kelola Multi Outlet dalam satu akun</string>
    <string name="txt_menggunakan_semua_fitur_yang_tersedia">1. Menggunakan semua fitur yang tersedia</string>
    <string name="_2_laporan_keuangan_pro">2. Laporan keuangan pro</string>
    <string name="txt_outletpro">3. Kelola multi outlet dalam satu akun</string>
    <string name="txt_inventori_pro">4. Manajemen Inventori Pro</string>
    <string name="coba_gratis">Coba gratis</string>
    <string name="back_pilih_metode_pembayaran"><![CDATA[< Pilih Metode Pembayaran]]></string>
    <string name="txt_pilih_metode_pembayaran">Pilih Metode Pembayaran</string>
    <string name="txt_jumlah_yang_harus_dibayarkan">Jumlah yang harus dibayarkan :</string>
    <string name="harga_basic">Rp. 99.900,00</string>
    <string name="back_petunjuk_pembayaran">Petunjuk Pembayaran</string>
    <string name="txt_back_petunjuk_pembayaran"><![CDATA[< Petunjuk Pembayaran]]></string>
    <string name="txt_sisa_waktu_pembayaran_03_00_00">Sisa Waktu Pembayaran 03:00:00</string>
    <string name="txt_kode_pembayaran">Kode Pembayaran</string>
    <string name="kodebayar">10252 2109 1600 4806 81111</string>
    <string name="txt_jumlah_yang_harus_dibayar">Jumlah yang harus dibayar</string>
    <string name="txt_hargapembayaran">Rp. 99.900</string>
    <string name="pembayaran_berhasil_di_lakukan">Pembayaran Berhasil di Lakukan</string>
    <string name="txt_pembayaran_sukes"><![CDATA[< Pembayaran Sukes]]></string>
    <string name="txt_expense">Expense</string>
    <string name="txt_income">Income</string>
    <string name="current_ballance">Current Ballance</string>
    <string name="saldo">Rp. 0</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="txt_calculator">Calculator</string>
    <string name="reports">Reports</string>
    <string name="transaksi">Transaksi</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="calculator">Calculator</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="transaksi2">Transaksi</string>
    <string name="belum_ada_transaksi_apapun">Belum ada transaksi apapun</string>
</resources>