<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".petunjuk_pembayaran">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_back_petunjuk_pembayaran"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:id="@+id/txt_petunjukpembayaran"/>


    <TextView
        android:id="@+id/txt_sisawaktubayar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_petunjukpembayaran"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/kolomm"
        android:fontFamily="@font/roboto"
        android:paddingTop="5dp"
        android:text="@string/txt_sisa_waktu_pembayaran_03_00_00"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_kode_pembayaran"
        android:layout_below="@+id/txt_sisawaktubayar"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:id="@+id/txt_kodepembayaran"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kodebayar"
        android:layout_below="@id/txt_kodepembayaran"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:id="@+id/kode_bayar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_jumlah_yang_harus_dibayar"
        android:layout_below="@+id/kode_bayar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:id="@+id/txt_jumlah"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_hargapembayaran"
        android:layout_below="@+id/txt_jumlah"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/roboto"
        android:id="@+id/txt_harga"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/atm_bri"
        android:layout_below="@id/txt_harga"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/atm_bri"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/m_bri"
        android:layout_below="@id/atm_bri"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:id="@+id/m_bri"/>

    <ImageButton
        android:id="@+id/btn_bayarsekarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/m_bri"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_bayarsekarang" />

</RelativeLayout>