<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calculate"
    tools:context=".calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_bawah"
        android:orientation="vertical"
        android:layout_marginTop="600dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/calculator" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/star" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/home" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/keranjang" />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/ic_grafik" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/calculator"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:fontFamily="@font/roboto"
                android:text="@string/favorites"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:fontFamily="@font/roboto"
                android:text="@string/home"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/transaksi"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto"
                android:text="@string/reports"
                android:textColor="@color/white" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>